# qsar-pipeline

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/Tox21/: README.md  tox21.yaml
examples/Tox21Extended/: README.md  tox21_extended.yaml
qsar_pipeline/: __init__.py  descriptor_calculator.py  ray.py  tox_smarts.py  utils.py
qsar_pipeline/calculators/: __init__.py  mordred_calculator.py  rdkit_calculator.py  toxicophores_calculator.py
qsar_pipeline/config/: config.yaml
qsar_pipeline/pipelines/: compute_descriptors.py
