[tool.poetry]
name = "qsar-pipeline"
version = "0.2.0"
description = "Feature preprocessing pipeline for QSAR modelling"
authors = ["Peter Ruch <gfrogat@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.1.0"
mordred = "^1.2.0"
pandas = "^1.2.4"
pyarrow = "^4.0.1"
ray = {version = "1.2.0", extras = ["default"]}

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
pylint = "^2.8.3"
isort = "^5.8.0"
black = "^21.6b0"
jupyterlab = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"compute_descriptors" = "qsar_pipeline.pipelines.compute_descriptors:entry"
